--- a/Singularity.0.11.5
+++ b/Singularity.0.11.5
@@ -11,14 +11,17 @@ From: alpine:3.12.3
 	PROJECT "Flat Oyster Genomics"
 
 %post
+	VER=0.11.5
 	apk add --no-cache perl=5.30.3-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
 	libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.6.12-r0 freetype=2.10.4-r0 \
 	openjdk8-jre=8.252.09-r0 fontconfig=2.13.1-r2 ttf-dejavu=2.37-r1
-	wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v0.11.5.zip
-	echo "3524f101c0ab0bae77c7595983170a76  fastqc_v0.11.5.zip" | md5sum -cw -
-	unzip fastqc_v0.11.5.zip
-	chmod +x FastQC/fastqc
-	rm fastqc_v0.11.5.zip
 
-%environment
-	export PATH=$PATH:FastQC
+	wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v${VER}.zip
+	echo "3524f101c0ab0bae77c7595983170a76  fastqc_v${VER}.zip" | md5sum -cw -
+	unzip fastqc_v${VER}.zip
+	chmod 775 FastQC/fastqc
+	mv FastQC/* /usr/local/bin
+	rm -rf fastqc_v${VER}.zip FastQC
+
+%test
+	fastqc -h
