--- a/Singularity.0.11.9
+++ b/Singularity.0.11.9
@@ -12,14 +12,15 @@ From: alpine:3.13.1
 
 %post
 	VER=0.11.9
-	apk add --no-cache perl=5.30.3-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
-	libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.6.12-r0 freetype=2.10.4-r0 \
-	openjdk8-jre=8.252.09-r0 fontconfig=2.13.1-r2 ttf-dejavu=2.37-r1
-	
+	apk add --no-cache perl=5.32.0-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
+	libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.7.0-r0 freetype=2.10.4-r1 \
+	openjdk8-jre=8.272.10-r4 fontconfig=2.13.1-r3 ttf-dejavu=2.37-r1
+
 	wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v${VER}.zip
 	unzip fastqc_v${VER}.zip
-	chmod +x FastQC/fastqc
-	rm fastqc_v${VER}.zip
+	chmod 775 FastQC/fastqc
+	mv FastQC/* /usr/local/bin
+	rm -rf fastqc_v${VER}.zip FastQC
 
-%environment
-	export PATH=$PATH:FastQC
+%test
+	fastqc -h
