--- a/Singularity.0.11.9
+++ b/Singularity.0.11.9
@@ -14,7 +14,7 @@ From: alpine:3.13.1
 	VER=0.11.9
 	apk add --no-cache perl=5.32.0-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
 	libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.7.0-r0 freetype=2.10.4-r1 \
-	openjdk8-jre=8.272.10-r4 fontconfig=2.13.1-r3 ttf-dejavu=2.37-r1
+	openjdk8-jre=8.272.10-r4 fontconfig=2.13.1-r3 ttf-dejavu=2.37-r1 bash=5.1.0-r0
 
 	wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v${VER}.zip
 	unzip fastqc_v${VER}.zip
