--- a/Singularity.0.11.9
+++ b/Singularity.0.11.9
@@ -2,25 +2,32 @@ Bootstrap: docker
 From: alpine:3.13.1
 
 %help
-	"FastQC v0.11.9 image"
-	fastqc -h
+"FastQC v0.11.9 image"
+fastqc -h
 
 %labels
-	MAINTAINER "Guillermo Piccoli <grpiccoli@gmail.com>"
-	SPECIES "Bluff Oyster"
-	PROJECT "Flat Oyster Genomics"
+MAINTAINER "Guillermo Piccoli <grpiccoli@gmail.com>"
+SPECIES "Bluff Oyster"
+PROJECT "Flat Oyster Genomics"
 
 %post
-	VER=0.11.9
-	apk add --no-cache perl=5.32.0-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
-	libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.7.0-r0 freetype=2.10.4-r1 \
-	openjdk8-jre=8.272.10-r4 fontconfig=2.13.1-r3 ttf-dejavu=2.37-r1 bash=5.1.0-r0
+VER=0.11.9
+apk add --no-cache \
+bash=5.1.0-r0 tzdata=2021a-r0 \
+perl=5.32.0-r0 libxext=1.3.4-r0 libxrender=0.9.10-r3 \
+libxtst=1.2.3-r3 libxi=1.7.10-r0 libx11=1.7.0-r0 freetype=2.10.4-r1 \
+openjdk8-jre=8.272.10-r4 fontconfig=2.13.1-r3 ttf-dejavu=2.37-r1
 
-	wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v${VER}.zip
-	unzip fastqc_v${VER}.zip
-	chmod 775 FastQC/fastqc
-	mv FastQC/* /usr/local/bin
-	rm -rf fastqc_v${VER}.zip FastQC
+#set date
+cp /usr/share/zoneinfo/NZ /etc/localtime
+echo "NZ" >  /etc/timezone
+
+wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v${VER}.zip
+unzip fastqc_v${VER}.zip
+chmod 775 FastQC/fastqc
+mv FastQC/* /usr/local/bin
+echo "9223372036854771712" > /sys/fs/cgroup/memory/memory.limit_in_bytes
+rm -rf fastqc_v${VER}.zip FastQC
 
 %test
-	fastqc -h
+fastqc -h
